<?xml version="1.0"?>
<package format="2">
  <name>actionlib_tools</name>
  <version>1.14.0</version>
  <description>The actionlib_tools package</description>

  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/actionlib</url>
  <url type="bugtracker">https://github.com/ros/actionlib/issues</url>
  <url type="repository">https://github.com/ros/actionlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Vijay Pradeep</author>
  <author>Mikael Arguedas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <!-- Noetic uses Python 3 -->
  <exec_depend>python3-wxgtk4.0</exec_depend>

</package>
