#
#  CURRENTLY THIS FILE IS ROSBUILD2 ONLY.
#
rosbuild_add_executable(add_two_ints_client add_two_ints_client.cpp)
target_link_libraries(add_two_ints_client ${PROJECT_NAME})
rosbuild_add_executable(add_two_ints_server add_two_ints_server.cpp)
target_link_libraries(add_two_ints_server ${PROJECT_NAME})
rosbuild_add_executable(ref_server ref_server.cpp)
target_link_libraries(ref_server ${PROJECT_NAME})
rosbuild_add_executable(server_goal_handle_destruction server_goal_handle_destruction.cpp)
rosbuild_add_gtest_build_flags(server_goal_handle_destruction)
rosbuild_declare_test(server_goal_handle_destruction)
target_link_libraries(server_goal_handle_destruction ${PROJECT_NAME})
rosbuild_add_executable(simple_execute_ref_server simple_execute_ref_server.cpp)
target_link_libraries(simple_execute_ref_server ${PROJECT_NAME})
rosbuild_add_executable(simple_client_test simple_client_test.cpp)
rosbuild_add_gtest_build_flags(simple_client_test)
rosbuild_declare_test(simple_client_test)
target_link_libraries(simple_client_test ${PROJECT_NAME})
rosbuild_add_executable(simple_client_wait_test simple_client_wait_test.cpp)
rosbuild_add_gtest_build_flags(simple_client_wait_test)
rosbuild_declare_test(simple_client_wait_test)
target_link_libraries(simple_client_wait_test ${PROJECT_NAME})
rosbuild_add_executable(simple_client_allocator_test simple_client_allocator_test.cpp)
rosbuild_add_gtest_build_flags(simple_client_allocator_test)
rosbuild_declare_test(simple_client_allocator_test)
target_link_libraries(simple_client_allocator_test ${PROJECT_NAME})
rosbuild_add_executable(action_client_destruction_test action_client_destruction_test.cpp)
rosbuild_add_gtest_build_flags(action_client_destruction_test)
rosbuild_declare_test(action_client_destruction_test)
target_link_libraries(action_client_destruction_test ${PROJECT_NAME})
rosbuild_add_gtest(destruction_guard_test destruction_guard_test.cpp)
target_link_libraries(destruction_guard_test ${PROJECT_NAME})
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/ref_server_test.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/simple_execute_ref_server_test.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_simple_client.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_simple_client_allocator.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_action_client_destruction.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_server_goal_handle_destruction.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_imports.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_server_components.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_server.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_server2.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_server3.launch)
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_python_simple_server.launch)

# New Testing format
rosbuild_add_executable(exercise_simple_client exercise_simple_client.cpp)
rosbuild_add_gtest_build_flags(exercise_simple_client)
target_link_libraries(exercise_simple_client ${PROJECT_NAME})
# New tests, using the TestRequest action
rosbuild_add_rostest(${CMAKE_CURRENT_SOURCE_DIR}/test_exercise_simple_clients.launch)
